--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "turnkey-react",
   "version": "0.1.0",
+  "homepage": "https://louiemanuel238.github.io/turnkey-react/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
